Add support to 3.9.4 version